// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transcribe: export function 1`] = `
"export function Test(a: number, b: string) {
  console.log(\\"export function\\");
  return a.toString() + b;
}

function Snippet() {
  console.log(\\"export function\\");
}"
`;

exports[`transcribe: method 1`] = `
"<Foo /> + function Test(this: Foo, a: number, b: string) {
  console.log(\\"hi\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
  console.log(\\"another\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
  return a.toString() + b;
};

function Snippet() {
  console.log(\\"hi\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
}

function AnotherSnippet() {
  console.log(\\"another\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
}

function SnippetNested() {
  console.log(\\"nested\\");
  console.log(\\"deep\\");
}

function DeepSnippet() {
  console.log(\\"deep\\");
}"
`;

exports[`transcribe: nested 1`] = `
"<Foo /> + function Test(this: Foo, a: number, b: string) {
  console.log(\\"hi\\");
  console.log(\\"nested\\");
  return a.toString() + b;
};

function Snippet() {
  console.log(\\"hi\\");
  console.log(\\"nested\\");
}

function SnippetNested() {
  console.log(\\"nested\\");
}"
`;

exports[`transcribe: simple 1`] = `
"<Foo /> + function Test(this: Foo, a: number, b: string) {
  console.log(\\"hi\\");
  return a.toString() + b;
};

function Snippet() {
  console.log(\\"hi\\");
}"
`;
